<resources>
    <string name="app_name">Android Portfolio</string>

    <string name="hello_world">These will be some apps!</string>
    <string name="media_streamer">spotify streamer</string>
    <string name="scores_app">scores app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger!</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="my_app">capstone: my app</string>
    <string name="app_spotify">spotify app!</string>
    <string name="app_bib">build it bigger app!</string>
    <string name="app_own">own app!</string>
    <string name="app_library">library app!</string>
    <string name="app_xyz">xyz reader app!</string>
    <string name="app_scores">scores app!</string>
    <string name="app_button_will_launch">"This button will launch my "</string>
</resources>
