<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:elegantTextHeight="false"
        android:textSize="24dp"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/btn_spotify"
        android:width="200dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="47dp"
        android:backgroundTint="#ff03a8f3"
        android:textColor="@android:color/white"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btn_scores"
        android:layout_below="@+id/btn_spotify"
        android:layout_alignLeft="@+id/btn_spotify"
        android:layout_alignStart="@+id/btn_spotify"
        android:layout_alignRight="@+id/btn_spotify"
        android:layout_alignEnd="@+id/btn_spotify"
        android:backgroundTint="#ff03a8f3"
        android:textColor="@android:color/white"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btn_library"
        android:layout_below="@+id/btn_scores"
        android:layout_alignLeft="@+id/btn_scores"
        android:layout_alignStart="@+id/btn_scores"
        android:layout_alignRight="@+id/btn_scores"
        android:layout_alignEnd="@+id/btn_scores"
        android:backgroundTint="#ff03a8f3"
        android:textColor="@android:color/white"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btn_build_bigger"
        android:layout_below="@+id/btn_library"
        android:layout_alignLeft="@+id/btn_library"
        android:layout_alignStart="@+id/btn_library"
        android:layout_alignRight="@+id/btn_library"
        android:layout_alignEnd="@+id/btn_library"
        android:backgroundTint="#ff03a8f3"
        android:textColor="@android:color/white"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btn_reader"
        android:layout_below="@+id/btn_build_bigger"
        android:layout_alignLeft="@+id/btn_library"
        android:layout_alignStart="@+id/btn_library"
        android:layout_alignRight="@+id/btn_build_bigger"
        android:layout_alignEnd="@+id/btn_build_bigger"
        android:backgroundTint="#ff03a8f3"
        android:textColor="@android:color/white"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_app"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_reader"
        android:layout_alignLeft="@+id/btn_spotify"
        android:layout_alignStart="@+id/btn_spotify"
        android:layout_alignRight="@+id/btn_reader"
        android:layout_alignEnd="@+id/btn_reader"
        android:backgroundTint="#ff0287d0"
        android:textColor="@android:color/white"
        android:onClick="sendMessage" />

</RelativeLayout>
